# stw-on-mensa-bot

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  README.de.md  README.md  pyproject.toml
.github/workflows/: cd.yml
tests/: test_mensabot.py
