[tool.poetry]
name = "stw-on-mensa-bot"
version = "0.0.1"
description = "Telegram Bot with schedules and meal plans of canteens and cafeterias of Studentenwerk OstNiedersachsen"
license = "ISC"
authors = ["Nikita Karamov <nick@karamoff.dev>"]
readme = "README.md"
repository = "https://github.com/NickKaramoff/stw-on-mensa-bot"
packages = [
	{ include = "mensabot" }
]
include = [
	"CHANGELOG.md",
	"LICENSE",
	"README*.md"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/NickKaramoff/stw-on-mensa-bot/issues"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.8.0"
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py36']
exclude = '/(\.git | dist)/'

[tool.isort]
profile = "black"
known_first_party = "mensabot"
src_paths = ["mensabot", "tests"]
atomic = true
lines_after_imports = 2
lines_between_types = 1
